# AI-patent-editor

./: CONTRIBUTING.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
client/: README.md  index.html  package-lock.json  package.json
client/src/: App.tsx  index.css
client/src/contexts/: AppContext.tsx
client/src/internal/: Document.tsx  SuggestionCard.tsx
client/src/internal/PatentSelector/: PatentSelector.tsx  index.ts  usePatentSelector.ts
client/src/internal/UpgradeProgressOverlay/: UpgradeProgressOverlay.tsx  index.ts  styles.ts  types.ts
client/src/internal/VersionSelector/: VersionSelector.tsx  index.ts  useVersionSelector.ts
client/src/utils/: parseSuggestions.test.ts  parseSuggestions.ts
server/: README.md  requirements.in  requirements.txt
server/app/: __main__.py  models.py  schemas.py  utils.py
server/app/internal/: ai.py  data.py  simple_upgrade_workflow.py
server/tests/: conftest.py  test_api.py  test_upgrade_workflow.py  test_utils.py
